<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2013 – 2016 Ricki Hirner (bitfire web engineering).
  ~ All rights reserved. This program and the accompanying materials
  ~ are made available under the terms of the GNU Public License v3.0
  ~ which accompanies this distribution, and is available at
  ~ http://www.gnu.org/licenses/gpl.html
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <!-- We don't want the keyboard up when the user arrives in this initial screen -->
    <View android:layout_height="0dp"
          android:layout_width="0dp"
          android:focusable="true"
          android:focusableInTouchMode="true"
          android:contentDescription="@null"
          android:importantForAccessibility="no" tools:ignore="UnusedAttribute">
        <requestFocus/>
    </View>

    <ScrollView android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="@dimen/activity_margin">

        <LinearLayout
            android:id="@+id/login_type_url_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher"/>

            <TextView
                android:id="@+id/login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_app_title_short"
                android:textSize="80sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="@string/login_runs_with_icloud"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_user_name"
                android:inputType="textEmailAddress"/>

            <at.bitfire.davdroid.ui.widget.EditPassword
                android:id="@+id/url_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:hint="@string/login_password"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/login_trademark_notice"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/stepper_nav_bar">

        <Space
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/stepper_nav_button"/>

        <Button
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/login_login"
            style="@style/stepper_nav_button"/>

    </LinearLayout>
</LinearLayout>
